<resources>
    <string name="app_name">Force Taxi</string>
    <string name="edit_login">Логин</string>
    <string name="edit_password">Пароль</string>
    <string name="button_enter">Войти</string>
    <string name="link_register"><u>Зарегистрироваться</u></string>
    <string name="link_recovery"><u>Забыл пароль</u></string>
    <string name="text_enter_success">Удалось войти</string>
    <string name="text_enter_error">При входе возникла ошибка:\n%1$s</string>
    <string name="edit_confirmation">Подтверждение пароля</string>
    <string name="edit_phone">Телефон</string>
    <string name="edit_email">E-mail</string>
    <string name="button_registration">Регистрация</string>
    <string name="text_code">Введите код из СМС, которое мы отправили на номер %1$s</string>
    <string name="edit_code">Код из СМС</string>
    <string name="button_send_sms">Отправить СМС</string>
    <string name="button_confirm">Подтвердить</string>
    <string name="text_registration">Для полноценной работы следует завершить следующие шаги:</string>
    <string name="link_tighten"><u>Привязать учет доходов \nи выбивание чеков</u></string>
    <string name="link_in_fns"><u>Зарегистрироваться в ФНС</u></string>
    <string name="link_force_accepted"><u>Предоставить права \nплощадке ООО «Фокс Такси»</u></string>
    <string name="link_pin_set"><u>Установить ПИН</u></string>
    <string name="button_configure_later">Настроить позже</string>
    <string name="text_recovery">Укажите почту или телефон для восстановления пароля</string>
    <string name="edit_phonemail">E-mail или телефон</string>
    <string name="button_recovery">Восстановить</string>
    <string name="text_recovery_success">На почту отправлены инструкции по восстановлению пароля</string>
    <string name="text_recovery_error">При восстановлении пароля по e-mail возникла ошибка:\n%1$s</string>
    <string name="text_password">Придумайте новый пароль:</string>
    <string name="button_change_password">Сменить пароль</string>
    <string name="text_password_success">Пароль успешно изменен</string>
    <string name="text_password_error">При смене пароля возникла ошибка:\n%1$s</string>
    <string name="text_inn">Укажите ваш ИНН</string>
    <string name="edit_inn">ИНН</string>
    <string name="link_inn_remind">Напомнить ИНН</string>
    <string name="button_inn_set">Продолжить</string>
    <string name="text_set_inn_success">Удалось указать ИНН</string>
    <string name="text_set_inn_error">При указании ИНН возникла ошибка:\n%1$s</string>
    <string name="edit_surname">Фамилия</string>
    <string name="edit_name">Имя</string>
    <string name="edit_patronymic">Отчество</string>
    <string name="edit_doc_series">Серия</string>
    <string name="edit_doc_number">Номер паспорта</string>
    <string name="button_search">Поиск в ФНС</string>
    <string name="link_inn_info">Как зарегистрироваться самозанятым</string>
    <string name="text_search_inn_success">ИНН найден:\n%1$s</string>
    <string name="text_search_inn_error">При поиске ИНН возникла ошибка:\n%1$s</string>
    <string name="url_inn_info">https://lknpd.nalog.ru/</string>
    <string name="text_bind">Привяжите учет доходов\nи выбивание чеков:</string>
    <string name="text_bind_info">
        ФИО\n
        <b>Иванов Вазген Куйран Оглы</b>\n
        ИНН\n
        <b>1234567</b>\n
        ОКТМО\n
        <b>46748000890</b>\n
        Дата постановки на учет\n
        <b>01.07.2019</b>\n
        Виды деятельности\n
        <b>- Такси</b>
    </string>
    <string name="button_bind">Привязать</string>
    <string name="link_bind_info">Как дать разрешения на работу площадки</string>
    <string name="text_bind_inn_success">ИНН %1$s привязан</string>
    <string name="text_bind_inn_error">При привязке ИНН %1$s возникла ошибка:\n%2$s</string>
    <string name="check_history"><u>История чеков</u></string>
    <string name="check_number">Чек №1234567</string>
    <string name="check_text">
    Услуга: Оказание услуг такси\n
    Сумма: %1$s р.\n
    Исполнитель: ФИО, ИНН\n
    Дата расчета: 04.08.2019
    </string>
    <string name="qr">QR-код</string>
    <string name="check_url">https://link.to/order/1234567</string>
    <string name="check_client">Клиент</string>
    <string name="button_clear">C</string>
    <string name="button_point">,</string>
    <string name="button_back"><![CDATA[<]]></string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_print">Печать</string>
    <string name="button_hide">Скрыть</string>
    <string name="text_check_owner">
        Иванов Вазген Куйран Оглы\n
        ИНН: 1234567890
    </string>
    <string name="check_storno"><u>Отмена</u></string>
    <string name="edit_reason">Причина отмены чека</string>
    <string name="check_agreement">Я понимаю ответственность за недобросовестные действия и то, что клиент будет уведомлен об отмене чека</string>
    <string name="button_storno">Сторнировать чек</string>
    <string name="text_check_cancelled">Чек успешно сторнирован (уничтожен)</string>
    <string name="text_balance_label">Баланс для уплаты налогов</string>
    <string name="button_recharge">Пополнить баланс</string>
    <string name="text_transaction_amount">Сумма: %1$s рублей</string>
    <string name="text_transaction_date">Дата: %1$s</string>
    <string name="text_transaction_status">%1$s</string>
    <string name="edit_recharge_amount">Сумма</string>
    <string name="edit_recharge_gett">Позывной Gett</string>
    <string name="edit_recharge_ytaxi">Телефон в Я.Такси</string>
    <string name="edit_recharge_city">Телефон в Сити</string>
    <string name="edit_recharge_bolt">Телефон в Bolt</string>
    <string name="link_sberbank">Отправить ссылку для Сбербанка</string>
    <string name="text_balance_result">Заявка на пополнение\nбаланса отправлена</string>
    <string name="text_amount_label">Сумма:</string>
    <string name="text_status_label">Статус:</string>
    <string name="text_sberbank_label">Введите ваш номер телефона,  привязанный к Сбербанку,
        мы отправим вам ссылку на Сбербанк</string>
    <string name="button_send_sberbank">Отправить ссылку</string>
    <string name="text_sberbank_success">Ссылка на Сбербанк отправлена на телефон %1$s</string>
    <string name="text_sberbank_error">При отправке ссылки на телефон %1$s возникла ошибка:\n%2$s</string>
    <string name="text_pin_set">Придумайте пинкод</string>
    <string name="edit_pin_set">Пинкод</string>
    <string name="button_next">Продолжить</string>
    <string name="text_pin_confirm">Подтвердите пинкод</string>
    <string name="edit_pin_confirm">Пинкод повторно</string>
    <string name="text_pin_success">Пинкод успешно установлен</string>
    <string name="text_pin_error">При установке пинкода возникла ошибка:\n%1$s</string>
    <string name="text_pin_enter">Введите ПИН-код для входа в приложение</string>
    <string name="edit_pin_enter">Пинкод</string>
    <string name="text_server_success">Соединение с сервером прошло успешно</string>
    <string name="text_server_error">При соединении с сервером возникла ошибка:\n%1$s</string>
    <string name="text_email_success">Письмо на адрес %1$s отправлено успешно</string>
    <string name="text_email_error">При отправке письма на адрес %1$s возникла ошибка:\n%2$s</string>
    <string name="text_login_success">Вход под логином %1$s прошёл успешно</string>
    <string name="text_login_error">При попытке войти под логином %1$s возникла ошибка:\n%2$s</string>
    <string name="text_signup_success">Регистрация прошла успешно</string>
    <string name="text_signup_error">При регистрации возникла ошибка:\n%1$s</string>
    <string name="text_sendsms_success">СМС на номер %1$s отправлено успешно</string>
    <string name="text_sendsms_error">При отправке СМС на номер %1$s возникла ошибка:\n%2$s</string>
    <string name="text_getuser_success">Информация о пользователе запрошена успешно</string>
    <string name="text_getuser_error">При запросе информации о пользователе возникла ошибка:\n%1$s</string>
    <string name="text_resetpassword_success">Пароль сброшен успешно</string>
    <string name="text_resetpassword_error">При сбросе пароля возникла ошибка:\n%1$s</string>
    <string name="text_acceptresetpass_success">Процесс восстановления пароля начат успешно</string>
    <string name="text_acceptresetpass_error">При восстановлении пароля возникла ошибка:\n%1$s</string>
    <string name="text_setpassword_success">Пароль на сервере изменен успешно</string>
    <string name="text_setpassword_error">При изменении пароля возникла ошибка:\n%1$s</string>
    <string name="text_tightenincome_success">ИНН %1$s привязан успешно</string>
    <string name="text_tightenincome_error">При привязке ИНН %1$s возникла ошибка:\n%2$s</string>
    <string name="text_searchinn_success">ИНН найден</string>
    <string name="text_searchinn_error">При поиске ИНН %1$s возникла ошибка:\n%1$s</string>
    <string name="text_setinn_success">ИНН %1$s установлен успешно</string>
    <string name="text_setinn_error">При установке ИНН %1$s возникла ошибка:\n%2$s</string>
    <string name="text_balance_success">Баланс получен успешно</string>
    <string name="text_balance_error">При получении баланса возникла ошибка:\n%1$s</string>
    <string name="text_check_history_success">История чеков получена успешно</string>
    <string name="text_check_history_error">При получении истории чеков возникла ошибка:\n%1$s</string>
    <string name="text_refill_balance_success">Баланс пополнен на %1$s успешно</string>
    <string name="text_refill_balance_error">При пополнении баланса от %1$s возникла ошибка:\n%2$s</string>
</resources>