<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="club.plus1.forcetaxi.viewmodel.EnterViewModel" />
    </data>
    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/splash_screen"
            style="@style/AppTheme.ForceTaxi.Logo"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textPINConfirm"
            style="@style/AppTheme.ForceTaxi.Text"
            android:text="@string/text_pin_confirm" />

        <EditText
            android:id="@+id/editPINConfirm"
            style="@style/AppTheme.ForceTaxi.Edit"
            android:hint="@string/edit_pin_confirm"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:text="@{viewModel.pin}"
            android:textAlignment="center"
            tools:ignore="Autofill" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonClear"
                style="@style/AppTheme.ForceTaxi.Button"
                android:onClick='@{() -> viewModel.addNumber(context, "7")}'
                android:layout_weight="1"
                android:text="@string/button_7" />

            <Button
                android:id="@+id/buttonEmpty"
                style="@style/AppTheme.ForceTaxi.Button"
                android:onClick='@{() -> viewModel.addNumber(context, "8")}'
                android:layout_weight="1"
                android:text="@string/button_8" />

            <Button
                android:id="@+id/buttonBack"
                style="@style/AppTheme.ForceTaxi.Button"
                android:onClick='@{() -> viewModel.addNumber(context, "9")}'
                android:layout_weight="1"
                android:text="@string/button_9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                style="@style/AppTheme.ForceTaxi.Button"
                android:onClick='@{() -> viewModel.addNumber(context, "4")}'
                android:layout_weight="1"
                android:text="@string/button_4" />

            <Button
                android:id="@+id/button5"
                style="@style/AppTheme.ForceTaxi.Button"
                android:onClick='@{() -> viewModel.addNumber(context, "5")}'
                android:layout_weight="1"
                android:text="@string/button_5" />

            <Button
                android:id="@+id/button6"
                style="@style/AppTheme.ForceTaxi.Button"
                android:onClick='@{() -> viewModel.addNumber(context, "6")}'
                android:layout_weight="1"
                android:text="@string/button_6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                style="@style/AppTheme.ForceTaxi.Button"
                android:onClick='@{() -> viewModel.addNumber(context, "1")}'
                android:layout_weight="1"
                android:text="@string/button_1" />

            <Button
                android:id="@+id/button2"
                style="@style/AppTheme.ForceTaxi.Button"
                android:onClick='@{() -> viewModel.addNumber(context, "2")}'
                android:layout_weight="1"
                android:text="@string/button_2" />

            <Button
                android:id="@+id/button3"
                style="@style/AppTheme.ForceTaxi.Button"
                android:onClick='@{() -> viewModel.addNumber(context, "3")}'
                android:layout_weight="1"
                android:text="@string/button_3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button0"
                style="@style/AppTheme.ForceTaxi.Button"
                android:onClick='@{() -> viewModel.addNumber(context, "0")}'
                android:layout_weight="2"
                android:text="@string/button_0" />

            <Button
                android:id="@+id/buttonNext"
                style="@style/AppTheme.ForceTaxi.Button"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.onPinConfirm(context)}"
                android:text="@string/button_next" />
        </LinearLayout>
    </LinearLayout>
</layout>