<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="club.plus1.forcetaxi.viewmodel.RegistrationViewModel" />
    </data>
    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/splash_screen"
            style="@style/AppTheme.ForceTaxi.Logo"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/editLogin"
            style="@style/AppTheme.ForceTaxi.Edit"
            android:hint="@string/edit_login"
            android:text="@={viewModel.login}"
            android:inputType="textPersonName|text"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editPassword"
            style="@style/AppTheme.ForceTaxi.Edit"
            android:hint="@string/edit_password"
            android:text="@={viewModel.password}"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editConfirmation"
            style="@style/AppTheme.ForceTaxi.Edit"
            android:text="@={viewModel.confirm}"
            android:hint="@string/edit_confirmation"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editPhone"
            style="@style/AppTheme.ForceTaxi.Edit"
            android:hint="@string/edit_phone"
            android:text="@={viewModel.phone}"
            android:inputType="phone"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editEmail"
            style="@style/AppTheme.ForceTaxi.Edit"
            android:hint="@string/edit_email"
            android:text="@={viewModel.email}"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/buttonRegistration"
            style="@style/AppTheme.ForceTaxi.Button"
            android:onClick="@{() -> viewModel.onRegistration(context)}"
            android:text="@string/button_registration" />
    </LinearLayout>
</layout>