<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="club.plus1.forcetaxi.viewmodel.InnViewModel" />
    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/splash_screen"
            style="@style/AppTheme.ForceTaxi.Logo"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textInn"
            style="@style/AppTheme.ForceTaxi.Text"
            android:text="@string/text_inn" />

        <EditText
            android:id="@+id/editInn"
            style="@style/AppTheme.ForceTaxi.Edit"
            android:hint="@string/edit_inn"
            android:inputType="number"
            android:text="@={viewModel.inn}"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/linkInnRemind"
            style="@style/AppTheme.ForceTaxi.Link"
            android:onClick="@{() -> viewModel.onInnRemind(context)}"
            android:text="@string/link_inn_remind" />

        <Button
            android:id="@+id/buttonInnSet"
            style="@style/AppTheme.ForceTaxi.Button"
            android:onClick="@{() -> viewModel.onInnSet(context)}"
            android:text="@string/button_inn_set" />
    </LinearLayout>
</layout>