<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="club.plus1.forcetaxi.viewmodel.PasswordViewModel" />
    </data>
    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/splash_screen"
            style="@style/AppTheme.ForceTaxi.Logo"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textPassword"
            style="@style/AppTheme.ForceTaxi.Text"
            android:text="@string/text_password" />

        <EditText
            android:id="@+id/editPassword"
            style="@style/AppTheme.ForceTaxi.Edit"
            android:hint="@string/edit_password"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editConfirmation"
            style="@style/AppTheme.ForceTaxi.Edit"
            android:hint="@string/edit_confirmation"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/buttonChangePassword"
            style="@style/AppTheme.ForceTaxi.Button"
            android:onClick="@{() -> viewModel.onPasswordChange(context)}"
            android:text="@string/button_change_password" />
    </LinearLayout>
</layout>